@@ -633,6 +633,12 @@ If it is not specified for a major-mode,
 			  (concat "/"
 				  (substring emacs-version 0
 					     (match-beginning 0))
+				  (if (and (boundp 'xemacs-betaname)
+					   ;; It does not exist in XEmacs
+					   ;; versions prior to 20.3.
+					   xemacs-betaname)
+				      (concat " " xemacs-betaname)
+				    "")
 				  " (" xemacs-codename ") ("
 				  system-configuration ")")
 			" (" emacs-version ")"))
