@@ -1,3 +1,9 @@
+1998-12-03  Katsumi Yamaoka   <yamaoka@jpl.org>
+
+	* mime-edit.el (mime-edit-user-agent-value): Include
+	`xemacs-betaname'.
+
+
 1998-12-02  MORIOKA Tomohiko  <morioka@jaist.ac.jp>
 
 	* SEMI: Version 1.12.0 (Nishi-Kanazawa) released.
